[gd_scene load_steps=5 format=2]

[ext_resource path="res://Src/Menu/Quote.gd" type="Script" id=1]
[ext_resource path="res://Assets/Font/Spritecoder_Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Src/Menu/ScreenFader.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 2 )

[node name="Quote" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BlinkingTimer" type="Timer" parent="."]
wait_time = 0.8
autostart = true

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
margin_right = 1280.0
margin_bottom = 720.0

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer"]
margin_left = 65.0
margin_top = 169.0
margin_right = 1215.0
margin_bottom = 551.0

[node name="Quote" type="Label" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_right = 1150.0
margin_bottom = 141.0
custom_fonts/font = SubResource( 1 )
text = "\"No computer can generate truly random numbers\"

- Developer of this game"

[node name="ContinueLabel" type="Label" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_top = 145.0
margin_right = 1150.0
margin_bottom = 382.0
custom_fonts/font = SubResource( 1 )
text = "



Press any key to continue. . ."
align = 1

[node name="ScreenFader" parent="." instance=ExtResource( 3 )]
visible = false

[connection signal="timeout" from="BlinkingTimer" to="." method="_on_BlinkingTimer_timeout"]
[connection signal="animation_finished" from="ScreenFader" to="." method="_on_ScreenFader_animation_finished"]
